--- a/index.html
+++ b/index.html
@@ -1,1 +1,126 @@
-Brennan Center for Justice
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Judicial Selection processes for all 50 states and DC. Covers all three state court levels: State Supreme Court, Intermediate Appellate Courts and Trial Courts.">
+    <meta name="author" content="Seemant Kulleen">
+
+    <title>Judicial Selections - Brennan Center for Justice</title>
+  <!-- Favicon -->
+    <link rel="shortcut icon" href="http://www.brennancenter.org/sites/all/themes/bcj-zen/favicon.ico" type="image/vnd.microsoft.icon" />
+
+  <!-- Minimal Bootstrap -->
+    <link href="css/vendor/bootstrap.min.css" rel="stylesheet" type="text/css">
+
+  <!-- Fonts -->
+    <link href="css/vendor/font-awesome.min.css" rel="stylesheet" type="text/css">
+
+  <!-- Visualization stylesheet -->
+    <link href="css/colors.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+
+  <!-- shims -->
+    <!--HTML5 shim, for IE6-8 support of HTML5 elements-->
+    <!--[if lt IE 9]>
+    <script async src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script async src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <![endif]-->
+  </head>
+
+  <body id="page-top" class="index">
+    <article>
+      <div class="page-header text-center">
+        <img src="http://www.brennancenter.org/sites/all/themes/bcj2-zen/images/bcj_logo.png"
+          alt="Brennan Center for Justice at NYU"
+          class="img-responsive center-block"
+        >
+      </div><!--.page-header-->
+
+      <!-- The Visualization -->
+      <div id="introduction">
+        <div id="title" class="row text-center">
+          <h1>Judicial Selection across the United States</h1>
+          <p class="lead">Welcome to the <a target="_blank" href="http://www.brennancenter.org/">Brennan Center for Justice’s</a> map of state judicial selection practices, part of the <a target="_blank" href="http://www.brennancenter.org/issues/fair-courts">Fair Courts Project’s</a> investigation into <a target="_blank" href="https://www.brennancenter.org/judicial-selection-21st-century">Judicial Selection for the 21st Century</a>.</p>
+        </div><!--.row-->
+        <div id="intro" class="flex-container">
+          <div class="intro-column">
+            <p>Each day, state court judges shape the country we live in. They interpret the law to resolve disagreements and protect the rights of people in the communities they serve. Yet in spite of their consistent importance state court judges are selected differently in nearly every state. The Brennan Center produced this interactive map to describe, compare, and evaluate selection processes across the country, and to help foster conversations about how those methods might be improved.</p>
+            <p>Not into maps? Go straight to the <a target="_blank" href="https://www.brennancenter.org/analysis/judicial-selection-frequently-asked-questions">summary statistics</a>.</p>
+          </div><!--.intro-column-->
+          <div class="intro-column">
+            <p>States select judges differently depending on both the level of state court and what type of judicial vacancy is being filled. Each state has several levels of courts, ranging from the trial court level to the state supreme court level. The type of vacancy, or “selection phase,” depends on when the seat becomes open and whether it involves an incumbent judge seeking re-selection for an additional term on the court. Use the two dropdown menus to view selection processes for a given court level and selection phase, or select “Overview” for a general summary of how each state selects its judges.</p>
+            <p>Click the “Reset” button at any time to return to the map’s starting position.</p>
+          </div><!--.intro-column-->
+          <div class="intro-column">
+            <p>Click to interact directly with the map and legend. Hover over any colored bar for a glance at the states included in that category, and click to highlight that group of states in the map. Groups with a (+) symbol expand with a click to display additional levels of detail. To learn more about a particular state, select it on the map or in the menu below. Hover over a confusing term for a brief definition or check out the Glossary of Terms for a more in-depth explanation.</p>
+            <p><a target="_blank" href="https://www.brennancenter.org/map-data">Download the table of sources</a> used to build the map.</p>
+          </div><!--.intro-column-->
+        </div><!--#intro.flex-container-->
+        <hr/>
+      </div><!--/#introduction-->
+      <div id="viz" class="flex-container">
+        <div id="corpus" class="viz askus flex-container">
+          <button type="button" id="reset-all" class="btn btn-default btn-default">Reset Map</button>
+          <div class="btn-group" id="chooser-Court" role="group" data-toggle="buttons">
+            <label class="btn btn-default btn-default">
+              <input type="radio" value="Supreme">
+              <select>
+                <optgroup label="Select a Court Level"></optgroup>
+              </select>
+            </label>
+          </div><!--.btn-group#chooser-Court-->
+          <div class="btn-group" id="chooser-Phase" role="group" data-toggle="buttons">
+            <label class="choice-all btn btn-default btn-default">
+              <input type="radio" value="all">Overview
+            </label>
+            <label class="choice-pick btn btn-default btn-default">
+              <input type="radio" value="">
+                <select>
+                  <optgroup label="Select a Phase"></optgroup>
+                </select>
+            </label>
+          </div><!--.btn-group#chooser-Phase-->
+        </div><!--/#corpus-->
+        <div id="atlas"><svg></svg></div>
+        <div id="abacus"><ul class="abacus legend"></ul></div>
+        <div id="compass" class="viz askus flex-container">
+          <div class="btn-group" id="chooser-State" role="group" data-toggle="buttons">
+            <label class="choice-all btn btn-default">
+              <input type="radio" value="all">None
+            </label>
+            <label class="choice-pick btn btn-default">
+              <input type="radio" value="">
+                <select>
+                  <optgroup label="Select a State"></optgroup>
+                </select>
+            </label>
+          </div><!--.btn-group#chooser-State-->
+        </div><!--/#compass.clickus-->
+        <div id="oculus" class="viz flex-container">
+          <div id="locus" class="flex-container"></div>
+          <div id="focus"></div>
+        </div><!--/#oculus-->
+      </div><!--/#viz-->
+      <div id="tooltip"></div>
+    </article>
+    <footer>
+      <hr>
+      <p class="qqtext-muted text-center small">
+        <small>&copy;2015-2016 <a target="_blank" href="http://seemantk.com">Seemant Kulleen</a>. All rights reserved.</small>
+      </p>
+    </footer>
+
+
+    <!-- Auxiliary files needed for this viz -->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" charset="utf-8"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" charset="utf-8"></script>
+
+    <script src="js/vendor/lodash.min.js" charset="utf-8"></script>
+    <script src="js/vendor/queue.min.js" charset="utf-8"></script>
+    <script src="js/vendor/topojson.min.js" charset="utf-8"></script>
+    <script src="js/vendor/d3.min.js" charset="utf-8"></script>
+
+    <script src="js/cats.min.js" charset="utf-8"></script>
+  </body>
+</html>
