Update to newest, which addresses all the previously known bugs.

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
             </label>
           </div><!--.btn-group#chooser-Phase-->
         </div><!--/#corpus-->
-        <div id="atlas"><svg></svg></div>
-        <div id="abacus"><ul class="abacus legend"></ul></div>
+        <div id="atlas" class="viz--half"><svg></svg></div>
+        <div id="abacus" class="viz--half"><ul class="abacus legend"></ul></div>
         <div id="compass" class="viz askus flex-container">
           <div class="btn-group" id="chooser-State" role="group" data-toggle="buttons">
             <label class="choice-all btn btn-default">
@@ -107,7 +107,7 @@
     <footer>
       <hr>
       <p class="qqtext-muted text-center small">
-        <small>&copy;2015-2016 <a target="_blank" href="http://seemantk.com">Seemant Kulleen</a>. All rights reserved.</small>
+        <small>Made by <a target="_blank" href="http://seemantk.com">Seemant Kulleen</a> for the <a target="_blank" href="http://brennancenter.org">Brennan Center for Justice</a>.</small>
       </p>
     </footer>
 
